# src/stock/stock.controller.js
@@ -8,6 +8,7 @@ const {default: yahooFinance} = require("yahoo-finance2");
 
 router.post('/insertStock', authorize(), insertUpdateStock);
 router.post('/insertStock-var', authorize(), insertStockVar);
+router.post('/insertSimulatiom', authorize(), insertSimulation);
 router.put('/:id', authorize(), insertUpdateStock);
 router.get('/getAllStocks', authorize(), getAllStocks);
 router.get('/:id', authorize(), getById);
@@ -159,6 +160,24 @@ async function insertStockVar(req, res, next) {
 
     }catch(err){
         return res.status(500).send({ error: err});
+    }
+};
+
+async function insertSimulation(req, res, next) {
+    try{
+        const simulationBody = req.body
+            const pass_ok = await stockService.insertSimulation(simulationBody);
+
+            if(pass_ok.errors || pass_ok.name == 'MongoError' || pass_ok.name == 'TypeError') {
+                const erro = { error: pass_ok.errors==undefined?pass_ok.stack:pass_ok.errors}
+                const retorno = res.status(400).send(erro);
+                return erro
+            }
+            return res.status(201).
+            send({message: simulationBody.nome.toString() + ' salvo com sucesso!'});
+
+    }catch(err){
+        return res.status(500).send({ error: err.message});
     }
 };
 
