# swagger/swagger_output.json
@@ -323,6 +323,26 @@
         }
       }
     },
+    "/stocks/insertSimulatiom": {
+      "post": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/stocks/{id}": {
       "put": {
         "description": "",
